--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,11 +30,15 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
+  publish:
+    runs-on: ubuntu-latest
+
+    steps:
     - uses: mr-smithers-excellent/docker-build-push@v6
       name: Build & push Docker image
       with:
           image: hims0301/calculator_devops
           tags: latest
-          registry: registry-url.io
+          registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
