--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:17
-COPY ./target/calc_mini_proj-1.0-SNAPSHOT-jar-with-dependencies.jar ./
+COPY ../../target/calc_mini_proj-1.0-SNAPSHOT-jar-with-dependencies.jar ./
 WORKDIR ./
 CMD ["java", "-cp","calc_mini_proj-1.0-SNAPSHOT-jar-with-dependencies.jar","org.example.Calculator"]
