--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,16 +31,20 @@ jobs:
       run: mvn -B package --file pom.xml
 
   publish:
-    runs-on: ubuntu-latest
+      runs-on: ubuntu-latest
+      steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    steps:
-    - uses: mr-smithers-excellent/docker-build-push@v6
-      name: Build & push Docker image
-      with:
-          image: hims0301/calculator_devops
-          tags: latest
+      - name: Build Docker image
+        run: docker build -t hims0301/calculator_devops:latest .
+
+      - name: Log in to Docker registry
+        uses: docker/login-action@v1
+        with:
           registry: docker.io
-          dockerfile: /./
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          
+
+      - name: Push Docker image
+        run: docker push hims0301/calculator_devops:latest
