--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -61,4 +61,4 @@ jobs:
       - name: remove container named calculator-container
         run: docker rm calculator-container || true
       - name: Start new container
-        run: docker run --name calculator-container -d -p 3000:3000 hims0301/calculator_devops:latest
+        run: docker run --name calculator-container -d hims0301/calculator_devops:latest
