--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -61,4 +61,4 @@ jobs:
       - name: remove container named calculator-container
         run: docker rm calculator-container || true
       - name: Start new container
-        run: docker run --name calculator-container -d -t hims0301/calculator_devops:latest /bin/bash
+        run: docker run --name calculator-container -d -t hims0301/calculator_devops:latest java -jar calc_mini_proj-1.0-SNAPSHOT-jar-with-dependencies.jar
