--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,6 +31,7 @@ jobs:
       run: mvn -B package --file pom.xml
 
   publish:
+      needs: build
       runs-on: ubuntu-latest
       steps:
       - name: Checkout code
